# RueDashboard

./: .env  README.md  fix.sh  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  update.sh  vite.config.ts
.github/workflows/: deploy.yml  release.yml
src/: App.css  App.jsx  App.tsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: auth.js  branches.js  client.js  inventory.js  inventory.ts  menu.js  menu.ts  orders.js  orders.ts  orgs.js  permissions.js  recipes.js  recipes.ts  reports.js  shifts.js  users.js
src/app/: index.css  main.tsx
src/app/providers/: index.tsx
src/app/router/: index.tsx
src/components/: Layout.jsx  ProtectedRoute.jsx  Sidebar.jsx
src/components/layout/: CommandPalette.tsx  Sidebar.tsx
src/components/shared/: DateRangePicker.tsx
src/entities/menu/: api.ts  queries.ts
src/entities/user/: schemas.ts
src/pages/: Dashboard.jsx
src/pages/analytics/: Analytics.tsx  analytics.tsx
src/pages/auth/: Login.jsx  Login.tsx  login.tsx
src/pages/branches/: Branches.jsx  branches.tsx
src/pages/dashboard/: Dashboard.tsx  dashboard.tsx
src/pages/discounts/: discounts.tsx
src/pages/inventory/: Inventory.jsx  Inventory.tsx  inventory.tsx
src/pages/menu/: Menu.jsx  Menu.tsx  constants.js  menu.tsx
src/pages/orders/: orders.tsx
src/pages/orgs/: Orgs.jsx  orgs.tsx
src/pages/permissions/: Permissions.jsx
src/store/: auth.jsx
src/types/: index.ts
src/utils/: format.ts
(+35 files in other folders)
